feat: add tooltips for extraction modes with detailed descriptions

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -124,10 +124,49 @@
   "extraction-mode-description": "Wähle, wie die KI Metadaten aus deinen Dokumenten verarbeiten und extrahieren soll",
   "extraction-mode-strict": "Wissenschaftlich",
   "extraction-mode-strict-description": "1:1 Extraktion ohne Korrekturen - ideal für Qualitätskontrolle und Plagiatsprüfung",
+  "extraction-mode-strict-tooltip": {
+    "title": "Strikt-Modus Details",
+    "description": "Exakte, zeichengetreue Übernahme der Quelldaten ohne jede Veränderung.",
+    "what-happens": "Was passiert:",
+    "happens-1": "Zeichengetreue Übernahme der Metadaten exakt wie sie im Text stehen",
+    "happens-2": "Alle Schreibweisen, Formatierungen und Strukturen werden beibehalten",
+    "what-not-happens": "Was NICHT passiert:",
+    "not-happens-1": "Keine Korrektur von Tipp- oder Rechtschreibfehlern",
+    "not-happens-2": "Keine Normalisierung von Groß-/Kleinschreibung oder Satzzeichen",
+    "not-happens-3": "Keine Interpretation von Abkürzungen (z.B. \"et a.\" bleibt \"et a.\")",
+    "not-happens-4": "Keine Ergänzung fehlender Informationen"
+  },
   "extraction-mode-balanced": "Standard",
   "extraction-mode-balanced-description": "Korrigiert Formatierung und Tippfehler, behält aber inhaltliche Genauigkeit bei - perfekt für den Alltag",
+  "extraction-mode-balanced-tooltip": {
+    "title": "Ausgewogen-Modus Details",
+    "description": "Kleinere Fehler und Inkonsistenzen beheben, ohne Bedeutung oder Inhalte zu verändern.",
+    "what-happens": "Was passiert:",
+    "happens-1": "Korrektur offensichtlicher Tippfehler (z.B. \"Jouranl\" → \"Journal\")",
+    "happens-2": "Normalisierung von Groß-/Kleinschreibung bei Standards",
+    "happens-3": "Vereinheitlichung typischer Abkürzungen (z.B. \"J.\" → \"Journal\")",
+    "happens-4": "DOI/ISSN/PMID/ISBN prüfen und in Standardformat bringen",
+    "what-not-happens": "Was NICHT passiert:",
+    "not-happens-1": "Keine inhaltliche Interpretation oder Bedeutungsänderung",
+    "not-happens-2": "Keine Ergänzung fehlender Felder durch Vermutungen",
+    "not-happens-3": "Keine Veränderung von Fachbegriffen oder speziellen Ausdrücken"
+  },
   "extraction-mode-tolerant": "Flexibel",
   "extraction-mode-tolerant-description": "Extrahiert auch aus unvollständigen Quellen mit intelligenter Inferenz - für Webdaten und OCR",
+  "extraction-mode-tolerant-tooltip": {
+    "title": "Tolerant-Modus Details",
+    "description": "Fehlertolerante, KI-intelligente Extraktion für maximalen Erfolg bei problematischen Quellen.",
+    "what-happens": "Was passiert (zusätzlich zum Ausgewogen-Modus):",
+    "happens-1": "Ergänzung fehlender, klar ableitbarer Felder (z.B. Datum aus Kontext)",
+    "happens-2": "Korrektur starker Formatierungsfehler (z.B. \"COVID 19\" → \"COVID-19\")",
+    "happens-3": "Interpretation von unvollständigen oder stark abgekürzten Angaben",
+    "happens-4": "Intelligente Behandlung von OCR-Fehlern oder Copy-Paste-Artefakten",
+    "happens-5": "Unicode-Bereinigung und umfassende Feldnormalisierung",
+    "what-not-happens": "Was dennoch NICHT passiert:",
+    "not-happens-1": "Vollständig fehlende Datenfelder werden nicht halluziniert oder erfunden",
+    "not-happens-2": "Inhalte werden nicht absichtlich \"verschönert\" - Referenztreue bleibt bewahrt",
+    "not-happens-3": "Keine spekulativen Ergänzungen ohne klaren Kontext"
+  },
   "field": "Feld",
   "field-abstract": "Abstract",
   "field-accepted": "Annahmedatum",
