--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -123,10 +123,49 @@
   "extraction-mode-description": "Choose how the AI should process and extract metadata from your documents",
   "extraction-mode-strict": "Scientific",
   "extraction-mode-strict-description": "1:1 extraction without corrections - ideal for quality control and plagiarism analysis",
+  "extraction-mode-strict-tooltip": {
+    "title": "Strict Mode Details",
+    "description": "Exact, character-by-character extraction of source data without any modification.",
+    "what-happens": "What happens:",
+    "happens-1": "Extract metadata exactly as it appears in the text, character for character",
+    "happens-2": "Preserve all spellings, formatting, and structures exactly",
+    "what-not-happens": "What does NOT happen:",
+    "not-happens-1": "No correction of typos or spelling errors",
+    "not-happens-2": "No normalization of capitalization or punctuation",
+    "not-happens-3": "No interpretation of abbreviations (e.g., \"et a.\" remains \"et a.\")",
+    "not-happens-4": "No addition of missing information"
+  },
   "extraction-mode-balanced": "Standard",
   "extraction-mode-balanced-description": "Fix formatting and typos but maintain content accuracy - perfect for everyday use",
+  "extraction-mode-balanced-tooltip": {
+    "title": "Balanced Mode Details",
+    "description": "Fix minor errors and inconsistencies without changing meaning or content.",
+    "what-happens": "What happens:",
+    "happens-1": "Correct obvious typos (e.g., \"Jouranl\" → \"Journal\")",
+    "happens-2": "Normalize capitalization for standards",
+    "happens-3": "Standardize common abbreviations (e.g., \"J.\" → \"Journal\")",
+    "happens-4": "Validate and standardize DOI/ISSN/PMID/ISBN formats",
+    "what-not-happens": "What does NOT happen:",
+    "not-happens-1": "No content interpretation or meaning changes",
+    "not-happens-2": "No addition of missing fields through guessing",
+    "not-happens-3": "No modification of technical terms or specialized expressions"
+  },
   "extraction-mode-tolerant": "Flexible",
   "extraction-mode-tolerant-description": "Extract even from incomplete sources with intelligent inference - for web data and OCR",
+  "extraction-mode-tolerant-tooltip": {
+    "title": "Tolerant Mode Details",
+    "description": "Error-tolerant, AI-intelligent extraction for maximum success with problematic sources.",
+    "what-happens": "What happens (in addition to Balanced Mode):",
+    "happens-1": "Add missing, clearly derivable fields (e.g., date from context)",
+    "happens-2": "Correct severe formatting errors (e.g., \"COVID 19\" → \"COVID-19\")",
+    "happens-3": "Interpret incomplete or heavily abbreviated information",
+    "happens-4": "Intelligent handling of OCR errors or copy-paste artifacts",
+    "happens-5": "Unicode cleanup and comprehensive field normalization",
+    "what-not-happens": "What still does NOT happen:",
+    "not-happens-1": "Do not hallucinate or invent completely missing data fields",
+    "not-happens-2": "Do not intentionally \"beautify\" content - maintain reference fidelity",
+    "not-happens-3": "No speculative additions without clear context"
+  },
   "field": "Field",
   "field-abstract": "Abstract",
   "field-accepted": "Acceptance Date",
