fix: update extraction mode tooltips for clarity and accuracy

--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -138,13 +138,14 @@
   "extraction-mode-balanced": "Standard",
   "extraction-mode-balanced-description": "Fix formatting and typos but maintain content accuracy - perfect for everyday use",
   "extraction-mode-balanced-tooltip": {
-    "title": "Balanced Mode Details",
-    "description": "Fix minor errors and inconsistencies without changing meaning or content.",
+    "title": "Standard Mode Details",
+    "description": "Systematically fix formatting and typos while maintaining content accuracy.",
     "what-happens": "What happens:",
-    "happens-1": "Correct obvious typos (e.g., \"Jouranl\" → \"Journal\")",
+    "happens-1": "Correct obvious typos and spelling errors (e.g., \"Jouranl\" → \"Journal\")",
     "happens-2": "Normalize capitalization for standards",
-    "happens-3": "Standardize common abbreviations (e.g., \"J.\" → \"Journal\")",
-    "happens-4": "Validate and standardize DOI/ISSN/PMID/ISBN formats",
+    "happens-3": "Standardize common abbreviations (e.g., \"J.\" → \"Journal\", \"Vol.\" → \"Volume\")",
+    "happens-4": "Consistent formatting of author names and dates",
+    "happens-5": "Validate and standardize DOI/ISSN/PMID/ISBN formats",
     "what-not-happens": "What does NOT happen:",
     "not-happens-1": "No content interpretation or meaning changes",
     "not-happens-2": "No addition of missing fields through guessing",
@@ -153,14 +154,15 @@
   "extraction-mode-tolerant": "Flexible",
   "extraction-mode-tolerant-description": "Extract even from incomplete sources with intelligent inference - for web data and OCR",
   "extraction-mode-tolerant-tooltip": {
-    "title": "Tolerant Mode Details",
-    "description": "Error-tolerant, AI-intelligent extraction for maximum success with problematic sources.",
-    "what-happens": "What happens (in addition to Balanced Mode):",
-    "happens-1": "Add missing, clearly derivable fields (e.g., date from context)",
-    "happens-2": "Correct severe formatting errors (e.g., \"COVID 19\" → \"COVID-19\")",
+    "title": "Flexible Mode Details",
+    "description": "Maximum AI intelligence for error-tolerant extraction from problematic sources.",
+    "what-happens": "What happens (all Standard features PLUS):",
+    "happens-1": "Typo correction and comprehensive format improvements",
+    "happens-2": "Intelligent addition of missing, derivable fields (e.g., date from context)",
     "happens-3": "Interpret incomplete or heavily abbreviated information",
-    "happens-4": "Intelligent handling of OCR errors or copy-paste artifacts",
-    "happens-5": "Unicode cleanup and comprehensive field normalization",
+    "happens-4": "Automatic recognition and standardization of source types",
+    "happens-5": "Comprehensive Unicode cleanup and OCR error handling",
+    "happens-6": "Reconstruct information separated by line breaks",
     "what-not-happens": "What still does NOT happen:",
     "not-happens-1": "Do not hallucinate or invent completely missing data fields",
     "not-happens-2": "Do not intentionally \"beautify\" content - maintain reference fidelity",
