--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -139,13 +139,14 @@
   "extraction-mode-balanced": "Standard",
   "extraction-mode-balanced-description": "Korrigiert Formatierung und Tippfehler, behält aber inhaltliche Genauigkeit bei - perfekt für den Alltag",
   "extraction-mode-balanced-tooltip": {
-    "title": "Ausgewogen-Modus Details",
-    "description": "Kleinere Fehler und Inkonsistenzen beheben, ohne Bedeutung oder Inhalte zu verändern.",
+    "title": "Standard-Modus Details",
+    "description": "Korrigiert systematisch Formatierung und Tippfehler, behält aber inhaltliche Genauigkeit bei.",
     "what-happens": "Was passiert:",
-    "happens-1": "Korrektur offensichtlicher Tippfehler (z.B. \"Jouranl\" → \"Journal\")",
+    "happens-1": "Korrektur offensichtlicher Tippfehler und Rechtschreibfehler (z.B. \"Jouranl\" → \"Journal\")",
     "happens-2": "Normalisierung von Groß-/Kleinschreibung bei Standards",
-    "happens-3": "Vereinheitlichung typischer Abkürzungen (z.B. \"J.\" → \"Journal\")",
-    "happens-4": "DOI/ISSN/PMID/ISBN prüfen und in Standardformat bringen",
+    "happens-3": "Vereinheitlichung typischer Abkürzungen (z.B. \"J.\" → \"Journal\", \"Vol.\" → \"Volume\")",
+    "happens-4": "Konsistente Formatierung von Autorennamen und Datumsangaben",
+    "happens-5": "DOI/ISSN/PMID/ISBN prüfen und in Standardformat bringen",
     "what-not-happens": "Was NICHT passiert:",
     "not-happens-1": "Keine inhaltliche Interpretation oder Bedeutungsänderung",
     "not-happens-2": "Keine Ergänzung fehlender Felder durch Vermutungen",
@@ -154,14 +155,15 @@
   "extraction-mode-tolerant": "Flexibel",
   "extraction-mode-tolerant-description": "Extrahiert auch aus unvollständigen Quellen mit intelligenter Inferenz - für Webdaten und OCR",
   "extraction-mode-tolerant-tooltip": {
-    "title": "Tolerant-Modus Details",
-    "description": "Fehlertolerante, KI-intelligente Extraktion für maximalen Erfolg bei problematischen Quellen.",
-    "what-happens": "Was passiert (zusätzlich zum Ausgewogen-Modus):",
-    "happens-1": "Ergänzung fehlender, klar ableitbarer Felder (z.B. Datum aus Kontext)",
-    "happens-2": "Korrektur starker Formatierungsfehler (z.B. \"COVID 19\" → \"COVID-19\")",
-    "happens-3": "Interpretation von unvollständigen oder stark abgekürzten Angaben",
-    "happens-4": "Intelligente Behandlung von OCR-Fehlern oder Copy-Paste-Artefakten",
-    "happens-5": "Unicode-Bereinigung und umfassende Feldnormalisierung",
+    "title": "Flexibel-Modus Details",
+    "description": "Maximale KI-Intelligenz für fehlertolerante Extraktion aus problematischen Quellen.",
+    "what-happens": "Was passiert (alle Standard-Funktionen PLUS):",
+    "happens-1": "Tippfehlerkorrektur und umfassende Formatverbesserungen",
+    "happens-2": "Intelligente Ergänzung fehlender, ableitbarer Felder (z.B. Datum aus Kontext)",
+    "happens-3": "Interpretation unvollständiger oder stark abgekürzter Informationen",
+    "happens-4": "Automatische Erkennung und Standardisierung von Quellentypen",
+    "happens-5": "Umfassende Unicode-Bereinigung und OCR-Fehlerbehandlung",
+    "happens-6": "Rekonstruktion von durch Zeilenumbrüche getrennten Informationen",
     "what-not-happens": "Was dennoch NICHT passiert:",
     "not-happens-1": "Vollständig fehlende Datenfelder werden nicht halluziniert oder erfunden",
     "not-happens-2": "Inhalte werden nicht absichtlich \"verschönert\" - Referenztreue bleibt bewahrt",
