feat: enhance extraction settings with internationalization support

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -180,6 +180,72 @@
     "feature-3": "Konfigurieren Sie granulare Einstellungen für Tippfehlerkorrektur, Formatierung usw.",
     "feature-4": "Perfekt für spezialisierte Anwendungsfälle und persönliche Workflows"
   },
+  "custom-configuration": "Individuelle Konfiguration",
+  "custom-configuration-description": "Konfigurieren Sie Ihre personalisierten Extraktionsregeln und -präferenzen",
+  "text-processing": "Textverarbeitung",
+  "text-processing-description": "Grundlegende Textkorrekturen und Normalisierungen",
+  "formatting-structure": "Formatierung & Struktur",
+  "formatting-structure-description": "Autorennamen, Daten und Identifikatoren-Formatierung",
+  "advanced-interpretation": "Erweiterte Interpretation",
+  "advanced-interpretation-description": "Intelligente Inhaltsergänzung und Quellenerkennung",
+  "technical-fixes": "Technische Korrekturen",
+  "technical-fixes-description": "OCR-Fehler, Unicode-Probleme und Formatierungsprobleme",
+  "load-strict": "Strikt laden",
+  "load-balanced": "Ausgewogen laden",
+  "load-tolerant": "Tolerant laden",
+  "clear-all": "Alle löschen",
+  "setting-typo-correction": "Tippfehlerkorrektur",
+  "setting-typo-correction-description": "Offensichtliche Rechtschreibfehler korrigieren",
+  "setting-typo-correction-example": "\"Jouranl\" → \"Journal\"",
+  "setting-normalize-capitalization": "Großschreibung normalisieren",
+  "setting-normalize-capitalization-description": "Groß- und Kleinschreibung standardisieren",
+  "setting-normalize-capitalization-example": "\"machine learning\" → \"Machine Learning\"",
+  "setting-standardize-abbreviations": "Abkürzungen standardisieren",
+  "setting-standardize-abbreviations-description": "Häufige Abkürzungen erweitern",
+  "setting-standardize-abbreviations-example": "\"J.\" → \"Journal\", \"Vol.\" → \"Volume\"",
+  "setting-standardize-punctuation": "Zeichensetzung standardisieren",
+  "setting-standardize-punctuation-description": "Satzzeichen bereinigen",
+  "setting-standardize-punctuation-example": "Zusätzliche Leerzeichen entfernen, Anführungszeichen korrigieren",
+  "setting-format-author-names": "Autorennamen formatieren",
+  "setting-format-author-names-description": "Einheitliche Formatierung von Autorennamen",
+  "setting-format-author-names-example": "\"smith j\" → \"Smith, J.\"",
+  "setting-remove-duplicate-authors": "Doppelte Autoren entfernen",
+  "setting-remove-duplicate-authors-description": "Doppelte Einträge eliminieren",
+  "setting-remove-duplicate-authors-example": "Wiederholte Autorennamen entfernen",
+  "setting-standardize-date-formatting": "Datumsformatierung standardisieren",
+  "setting-standardize-date-formatting-description": "Einheitliche Datumsformate",
+  "setting-standardize-date-formatting-example": "\"2024-03-15\" für alle Daten",
+  "setting-standardize-identifiers": "Identifikatoren standardisieren",
+  "setting-standardize-identifiers-description": "DOI/ISSN/ISBN-Formate validieren",
+  "setting-standardize-identifiers-example": "DOIs mit korrektem Präfix formatieren",
+  "setting-add-derivable-fields": "Ableitbare Felder hinzufügen",
+  "setting-add-derivable-fields-description": "Klar ableitbare Informationen ausfüllen",
+  "setting-add-derivable-fields-example": "Fehlenden Monat aus Kontext hinzufügen",
+  "setting-interpret-incomplete-info": "Unvollständige Informationen interpretieren",
+  "setting-interpret-incomplete-info-description": "Abgekürzte Informationen erweitern",
+  "setting-interpret-incomplete-info-example": "\"et al.\" → vollständige Autorenliste wenn verfügbar",
+  "setting-recognize-source-types": "Quellentypen erkennen",
+  "setting-recognize-source-types-description": "Publikationstypen automatisch erkennen",
+  "setting-recognize-source-types-example": "\"journal-article\" vs \"book\" erkennen",
+  "setting-convert-to-title-case": "In Titelschreibweise umwandeln",
+  "setting-convert-to-title-case-description": "Titel-Großschreibung standardisieren",
+  "setting-convert-to-title-case-example": "\"machine learning in healthcare\" → \"Machine Learning in Healthcare\"",
+  "setting-fix-unicode-issues": "Unicode-Probleme beheben",
+  "setting-fix-unicode-issues-description": "Sonderzeichen normalisieren",
+  "setting-fix-unicode-issues-example": "\"–\" → \"-\", Kodierungsprobleme beheben",
+  "setting-handle-ocr-errors": "OCR-Fehler behandeln",
+  "setting-handle-ocr-errors-description": "Scan-/Kopier-Einfüge-Artefakte korrigieren",
+  "setting-handle-ocr-errors-example": "\"rn\" → \"m\", \"li\" → \"h\" korrigieren",
+  "setting-reconstruct-separated-info": "Getrennte Informationen zusammenführen",
+  "setting-reconstruct-separated-info-description": "Zeilenumbruch-getrennte Inhalte zusammenführen",
+  "setting-reconstruct-separated-info-example": "Titel, die über Zeilen getrennt sind, zusammenführen",
+  "setting-complete-incomplete-data": "Unvollständige Daten vervollständigen",
+  "setting-complete-incomplete-data-description": "Offensichtliche Lücken füllen",
+  "setting-complete-incomplete-data-example": "Fehlende Seitenzahlen aus Bereich hinzufügen",
+  "setting-fix-formatting-problems": "Formatierungsprobleme beheben",
+  "setting-fix-formatting-problems-description": "Abstände und Struktur korrigieren",
+  "setting-fix-formatting-problems-example": "Fehlende Leerzeichen nach Satzzeichen korrigieren",
+  "example": "Beispiel",
   "field": "Feld",
   "field-abstract": "Abstract",
   "field-accepted": "Annahmedatum",
