--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -179,6 +179,72 @@
     "feature-3": "Configure granular settings for typo correction, formatting, etc.",
     "feature-4": "Perfect for specialized use cases and personal workflows"
   },
+  "custom-configuration": "Custom Configuration",
+  "custom-configuration-description": "Configure your personalized extraction rules and preferences",
+  "text-processing": "Text Processing",
+  "text-processing-description": "Basic text corrections and normalizations",
+  "formatting-structure": "Formatting & Structure",
+  "formatting-structure-description": "Author names, dates, and identifier formatting",
+  "advanced-interpretation": "Advanced Interpretation",
+  "advanced-interpretation-description": "Intelligent content completion and source recognition",
+  "technical-fixes": "Technical Fixes",
+  "technical-fixes-description": "OCR errors, Unicode issues, and formatting problems",
+  "load-strict": "Load Strict",
+  "load-balanced": "Load Balanced",
+  "load-tolerant": "Load Tolerant",
+  "clear-all": "Clear All",
+  "setting-typo-correction": "Typo Correction",
+  "setting-typo-correction-description": "Fix obvious spelling errors",
+  "setting-typo-correction-example": "\"Jouranl\" → \"Journal\"",
+  "setting-normalize-capitalization": "Normalize Capitalization",
+  "setting-normalize-capitalization-description": "Standardize letter casing",
+  "setting-normalize-capitalization-example": "\"machine learning\" → \"Machine Learning\"",
+  "setting-standardize-abbreviations": "Standardize Abbreviations",
+  "setting-standardize-abbreviations-description": "Expand common abbreviations",
+  "setting-standardize-abbreviations-example": "\"J.\" → \"Journal\", \"Vol.\" → \"Volume\"",
+  "setting-standardize-punctuation": "Standardize Punctuation",
+  "setting-standardize-punctuation-description": "Clean up punctuation marks",
+  "setting-standardize-punctuation-example": "Remove extra spaces, fix quote marks",
+  "setting-format-author-names": "Format Author Names",
+  "setting-format-author-names-description": "Consistent author name formatting",
+  "setting-format-author-names-example": "\"smith j\" → \"Smith, J.\"",
+  "setting-remove-duplicate-authors": "Remove Duplicate Authors",
+  "setting-remove-duplicate-authors-description": "Eliminate duplicate entries",
+  "setting-remove-duplicate-authors-example": "Remove repeated author names",
+  "setting-standardize-date-formatting": "Standardize Date Formatting",
+  "setting-standardize-date-formatting-description": "Consistent date formats",
+  "setting-standardize-date-formatting-example": "\"2024-03-15\" for all dates",
+  "setting-standardize-identifiers": "Standardize Identifiers",
+  "setting-standardize-identifiers-description": "Validate DOI/ISSN/ISBN formats",
+  "setting-standardize-identifiers-example": "Format DOIs with proper prefix",
+  "setting-add-derivable-fields": "Add Derivable Fields",
+  "setting-add-derivable-fields-description": "Fill in clearly inferrable information",
+  "setting-add-derivable-fields-example": "Add missing month from context",
+  "setting-interpret-incomplete-info": "Interpret Incomplete Info",
+  "setting-interpret-incomplete-info-description": "Expand abbreviated information",
+  "setting-interpret-incomplete-info-example": "\"et al.\" → full author list if available",
+  "setting-recognize-source-types": "Recognize Source Types",
+  "setting-recognize-source-types-description": "Automatically detect publication types",
+  "setting-recognize-source-types-example": "Detect \"journal-article\" vs \"book\"",
+  "setting-convert-to-title-case": "Convert to Title Case",
+  "setting-convert-to-title-case-description": "Standardize title capitalization",
+  "setting-convert-to-title-case-example": "\"machine learning in healthcare\" → \"Machine Learning in Healthcare\"",
+  "setting-fix-unicode-issues": "Fix Unicode Issues",
+  "setting-fix-unicode-issues-description": "Normalize special characters",
+  "setting-fix-unicode-issues-example": "\"–\" → \"-\", fix encoding problems",
+  "setting-handle-ocr-errors": "Handle OCR Errors",
+  "setting-handle-ocr-errors-description": "Fix scanning/copy-paste artifacts",
+  "setting-handle-ocr-errors-example": "Fix \"rn\" → \"m\", \"li\" → \"h\"",
+  "setting-reconstruct-separated-info": "Reconstruct Separated Info",
+  "setting-reconstruct-separated-info-description": "Merge line-broken content",
+  "setting-reconstruct-separated-info-example": "Join titles split across lines",
+  "setting-complete-incomplete-data": "Complete Incomplete Data",
+  "setting-complete-incomplete-data-description": "Fill obvious gaps",
+  "setting-complete-incomplete-data-example": "Add missing page numbers from range",
+  "setting-fix-formatting-problems": "Fix Formatting Problems",
+  "setting-fix-formatting-problems-description": "Correct spacing and structure",
+  "setting-fix-formatting-problems-example": "Fix missing spaces after punctuation",
+  "example": "Example",
   "field": "Field",
   "field-abstract": "Abstract",
   "field-accepted": "Acceptance Date",
