feat: implement modification tracking for reference extraction and update related schemas

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -60,6 +60,28 @@
   "copy-identifier": "Kennung kopieren",
   "copy-identifier-tooltip": "Die primäre Kennung (DOI, PMCID, etc.) in die Zwischenablage kopieren",
   "copy-reference": "Referenz kopieren",
+  "extraction-modification": "Änderung bei der Extraktion",
+  "original": "Original",
+  "extracted": "Extrahiert",
+  "change-type": "Art der Änderung",
+  "changes-applied": "Angewendete Änderungen",
+  "modification-type-typo-correction": "Tippfehler-Korrektur",
+  "modification-type-capitalization": "Großschreibung",
+  "modification-type-abbreviation-expansion": "Abkürzungs-Erweiterung",
+  "modification-type-punctuation-standardization": "Interpunktions-Standardisierung",
+  "modification-type-format-standardization": "Format-Standardisierung",
+  "modification-type-derivation": "Ableitung",
+  "modification-type-interpretation": "Interpretation",
+  "modification-type-author-name-formatting": "Autornamen-Formatierung",
+  "modification-type-date-formatting": "Datum-Formatierung",
+  "modification-type-identifier-standardization": "Kennung-Standardisierung",
+  "modification-type-unicode-fixing": "Unicode-Korrektur",
+  "modification-type-ocr-error-correction": "OCR-Fehler-Korrektur",
+  "modification-type-title-case-conversion": "Title-Case-Konvertierung",
+  "modification-type-duplicate-removal": "Duplikat-Entfernung",
+  "modification-type-field-derivation": "Feld-Ableitung",
+  "modification-type-information-reconstruction": "Informations-Rekonstruktion",
+  "modification-type-formatting-correction": "Formatierungs-Korrektur",
   "core-fields": "Kernfelder",
   "core-metadata": "Kern-Metadaten",
   "create-one-here": "hier erstellen",
