--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -60,6 +60,28 @@
   "copy-identifier": "Copy identifier",
   "copy-identifier-tooltip": "Copy the primary identifier (DOI, PMCID, etc.) to clipboard",
   "copy-reference": "Copy reference",
+  "extraction-modification": "Extraction Modification",
+  "original": "Original",
+  "extracted": "Extracted",
+  "change-type": "Type of Change",
+  "changes-applied": "Changes Applied",
+  "modification-type-typo-correction": "Typo Correction",
+  "modification-type-capitalization": "Capitalization",
+  "modification-type-abbreviation-expansion": "Abbreviation Expansion",
+  "modification-type-punctuation-standardization": "Punctuation Standardization",
+  "modification-type-format-standardization": "Format Standardization",
+  "modification-type-derivation": "Derivation",
+  "modification-type-interpretation": "Interpretation",
+  "modification-type-author-name-formatting": "Author Name Formatting",
+  "modification-type-date-formatting": "Date Formatting",
+  "modification-type-identifier-standardization": "Identifier Standardization",
+  "modification-type-unicode-fixing": "Unicode Fixing",
+  "modification-type-ocr-error-correction": "OCR Error Correction",
+  "modification-type-title-case-conversion": "Title Case Conversion",
+  "modification-type-duplicate-removal": "Duplicate Removal",
+  "modification-type-field-derivation": "Field Derivation",
+  "modification-type-information-reconstruction": "Information Reconstruction",
+  "modification-type-formatting-correction": "Formatting Correction",
   "core-fields": "Core Fields",
   "core-metadata": "Core Metadata",
   "create-one-here": "create one here",
